[package]
name = "backdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
